--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,33 @@
-body{
+body {
     font-family: 'Poppins', sans-serif;
 }
-h1{
+
+h1 {
     font-size: 50px;
+}
+
+.top-orange {
+    color: #FFA500;
+}
+
+section {
+    display: flex;
+}
+
+.top-banner {
+    width: 50%;
+    padding-left: 30px;
+}
+
+.top-banner img {
+    width: 80%;
+}
+
+.hire-button {
+    background-color: #FF6A4D;
+    text-decoration: none;
+    padding: 10px 30px;
+    border-radius: 20px;
+    font-weight: 600px;
+    color: white;
 }
