--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 
 h1 {
@@ -12,6 +13,11 @@ h1 {
 
 section {
     display: flex;
+}
+
+.top-corner {
+    background-image: url(/images/top-banner.png);
+    background-repeat: no-repeat;
 }
 
 .top-banner {
