exp area updating

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ p {
     color: #FFA500;
 }
 
-section {
+.flexible-container {
     display: flex;
     margin-bottom: 100px;
 }
@@ -47,4 +47,9 @@ section {
     background-image: url(/images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.experience-area {
+    background-image: url(/images/exp-bg.png);
+    background-repeat: no-repeat;
 }
