--- a/css/style.css
+++ b/css/style.css
@@ -53,3 +53,13 @@ p {
     background-image: url(/images/exp-bg.png);
     background-repeat: no-repeat;
 }
+
+.exp-item {
+    width: 40%;
+    box-shadow: 5px 5px 40px gray;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 30px;
+    padding-right: 20px;
+    border-radius: 15px;
+}
