--- a/css/style.css
+++ b/css/style.css
@@ -62,4 +62,18 @@ p {
     padding-left: 30px;
     padding-right: 20px;
     border-radius: 15px;
+
+}
+
+#senior {
+    border-left: 5px solid tomato;
+}
+
+#baby {
+    border-left: 5px solid blue;
+}
+
+footer p {
+    text-align: center;
+    color: gray;
 }
